Fix appearance of icon in multi-line jump links

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7660,7 +7660,6 @@ a.category-slug.active {
     - cfgov-misc
 */
 .jump-link {
-  display: inline-block;
   position: relative;
   margin-right: 1.5em;
   border-bottom-width: 1px;
@@ -7672,23 +7671,17 @@ a.category-slug.active {
 .lt-ie9 .jump-link {
   font-weight: normal !important;
 }
-.jump-link:before {
+.jump-link:after {
   content: "\e002";
-}
-.lt-ie8 .jump-link {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e002');
 }
 .jump-link__large {
   margin-right: 1.5em;
   font-size: 1.125em;
 }
-.jump-link__download:before {
+.jump-link__download:after {
   content: "\e406";
 }
-.lt-ie8 .jump-link__download {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e406');
-}
-.jump-link:before {
+.jump-link:after {
   font-family: 'CFPB Minicons';
   display: inline-block;
   font-style: normal;
@@ -7697,7 +7690,7 @@ a.category-slug.active {
   -webkit-font-smoothing: antialiased;
   display: block;
   position: absolute;
-  top: 0.25em;
+  bottom: 0;
   right: -1.5em;
   padding-left: 0.25em;
   width: 1em;
@@ -7714,10 +7707,10 @@ a.category-slug.active {
     border-width: 1px 0;
     margin-right: 0;
   }
-  .jump-link:before {
-    margin-top: -0.5em;
-    top: 50%;
+  .jump-link:after {
+    margin-bottom: -0.625em;
     right: 0;
+    bottom: 50%;
     text-align: right;
   }
 }
